# ConsoleTextEditor

./: CMakeLists.txt  README.md
TextEditer/: CMakeLists.txt  SETTINGS.h
TextEditer/Utils/: ConsoleColors.cpp  ConsoleColors.h
TextEditor/: CMakeLists.txt  main.cpp
TextEditor/Console/: Console.cpp  Console.h  Console_Char.cpp  Console_Char.h
TextEditor/Utils/: Direction.h  Vector2.h
